--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^4.8.2",
     "leaflet": "^1.6.0",
     "prop-types": "^15.5.7",
     "react": "^16.12.0",
@@ -15,7 +16,8 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
