--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^4.8.2",
+    "firebase-tools": "^7.13.1",
     "leaflet": "^1.6.0",
     "prop-types": "^15.5.7",
     "react": "^16.12.0",
